[package]
name = "losernode"
version = "0.1.0"
description = "loserchain node"
authors = ["loser coin community"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/losercoin/loserchain/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "losernode"

[dependencies]
async-trait = "0.1"
clap = { version = "3.0", features = ["derive"] }
futures = "0.3"
log = "0.4.8"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"

sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { version = "5.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "5.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }

sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"] }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-manual-seal = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"] }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }

# Local Dependencies
loserchain-runtime = { path = "../runtime", default-features = false, features = ["std"] }


fp-consensus = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }
fp-storage = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }

fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }

pallet-base-fee = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }
pallet-ethereum = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = []
runtime-benchmarks = [
	"loserchain-runtime/runtime-benchmarks",
]
